--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ ul.nav.navbar-nav li a:hover {
   background: #1a4a72;
 }
 .ih-item.circle.effect10 .info {
-       background: #147efb;
+    background: #ff1a75;
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
